# jakteristics

./: .gitlab-ci.yml  CLAUDE.md  Makefile  benchmark_10M_focused.py  benchmark_comparison.json  benchmark_performance.py  benchmark_results_master.json  benchmark_results_optimized.json  benchmark_results_original.json  benchmark_results_ultra_optimized.json  pyproject.toml  setup.py
jakteristics/: __init__.py  extension.pyx  main.py
jakteristics/ckdtree/: ckdtree.pyx
tests/: test_cli.py  test_features.py
